2025-12-11T01:38:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20119065495 # 835
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-11
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 978 1458 / 980 1460
* notice: next accum: outdated-unq outdated-all / unq all: 978 1458 / 981 1461
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-10]

2025-12-09T01:26:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20048676213 # 833
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-09
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 977 1457 / 980 1460
* notice: next accum: outdated-unq outdated-all / unq all: 978 1458 / 980 1460
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-24] / []

2025-12-06T01:22:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19980684664 # 830
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-06
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 977 1457 / 979 1459
* notice: next accum: outdated-unq outdated-all / unq all: 977 1457 / 980 1460
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-05]

2025-12-04T01:26:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19914526347 # 828