@@ -1,3 +1,12 @@
+2025-12-18T01:25:30Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20322792278 # 842
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-18
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 978 1458 / 981 1461
+* notice: next accum: outdated-unq outdated-all / unq all: 979 1459 / 981 1461
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-12-03] / []
+
 2025-12-11T01:38:00Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20119065495 # 835
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-11
